<resources>
    <string name="app_name">Yamba</string>
    <string name="titleStatusUpdate">Envoi d\'un toot</string>
    <string name="titleTimeline">Fil Mastodon</string>
    <string name="hintStatus">Veuillez saisir votre toot.</string>
    <string name="buttonUpdate">Envoyer le toot</string>

    <string name="buttonStartUpdateService">Démarrer UpdaterService</string>
    <string name="buttonStopUpdateService">Arrêter UpdaterService</string>

    <string name="updaterServiceStarted">UpdaterService est en fonction</string>
    <string name="updaterServiceAlreadyStarted">UpdaterService est déjà en fonction</string>
    <string name="updaterServiceStopped">UpdaterService n\'est plus en fonction</string>

    <string name="tootIsSent">Votre toot a été envoyé à Mastodon</string>
    <string name="timelineReceived">Le timeline de l\'usager a été récupéré de Mastodon</string>
    <string name="bigBoneException">Impossible d\'accéder au serveur Mastodon </string>
    <string name="exception">Un problème est survenu lors de l\'execution</string>

    <string name="titlePrefs">Préférences</string>
    <string name="delay">Délai</string>
    <string name="delaySummary">Délai entre deux récupérations de toots</string>
    <string name="numberOfToots">Nombre de toots</string>
    <string name="numberOfTootsSummary">Veuillez saisir le nombre de toots à récupérer</string>

    <string name="instanceHostname">mastodon.social</string>
    <string name="accessToken">3mDybADkOOU2oP4nKPmpo88kN7FeMpskiTzICaKqwnU</string>


    <string-array name="delayNames">
        <item>30 secondes</item>
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>30 minutes</item>
    </string-array>

    <string-array name="delayValues">
        <item>30</item>
        <item>60</item>
        <item>300</item>
        <item>1800</item>
    </string-array>

    <string name="myMusicServiceStarted">MyMusicService est en fonction</string>
    <string name="myMusicServiceStopped">MyMusicService n\'est pas en fonction</string>
    <string name="myMusicServiceNotification">Appuyer sur cette notification pour arrêter
        ce Service</string>

    <string name="sql">create table statuses (_id int primary key, c_createdAt int, c_user
        text, c_text text)</string>


</resources>