<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="40dp"
    tools:context=".StatusActivity"
    >

    <include layout="@layout/toolbar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        >

        <TextView
            android:id="@+id/textView"
            style="@style/titleStyle"
            android:text="@string/titleStatusUpdate"
            />

        <EditText
            android:id="@+id/editStatus"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="22dp"
            android:layout_weight="1"
            android:hint="@string/hintStatus"
            android:inputType="textMultiLine"
            android:textSize="20sp"
            tools:ignore="Autofill"
            />

        <Button
            android:id="@+id/buttonUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@android:drawable/btn_default"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/buttonUpdate"
            android:textAllCaps="false"
            android:textSize="22sp"
            />
    </LinearLayout>


</LinearLayout>